--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Settings Service polyfill</title>
+  <title>FM Radio Service polyfill</title>
   <meta name="description"
         content="Settings API service">
 
   <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" href="style/style.css">
+  <link rel="stylesheet" href="common/style/style.css">
 
   <!-- ADDED FOR SHIM -->
-  <script src="polyfill/navigator_connect_svr.js"></script>
-  <script defer src="common/serv_helper.js"></script>
+  <script src="common/polyfill/navigator_connect_svr.js"></script>
   <!-- END ADDED FOR SHIM -->
 
+  <script defer src="common/serv_helper.js"></script>
   <script defer src="js/app.js"></script>
 </head>
 <body>
